v5.11.0/python/_sources/paraview.simple.StreamTracerWithCustomSource.rst.txt
paraview.simple.StreamTracerWithCustomSource
============================================

.. currentmodule:: paraview.simple

.. autofunction:: StreamTracerWithCustomSource

Data Descriptors
----------------


   
   ComputeVorticity
       Specify whether to compute vorticity.
   
   InitialStepLength
       This property specifies the initial integration step
       size. For non-adaptive integrators (Runge-Kutta 2 and Runge-Kutta 4),
       it is fixed (always equal to this initial value) throughout the
       integration. For an adaptive integrator (Runge-Kutta 4-5), the actual
       step size varies such that the numerical error is less than a specified threshold.
   
   Input
       This property specifies the input to the Stream Tracer filter.
   
   IntegrationDirection
       This property determines in which direction(s) a streamline is generated.
   
   IntegrationStepUnit
       This property specifies the unit for
       Minimum/Initial/Maximum integration step size. The Length unit refers
       to the arc length that a particle travels/advects within a single step.
       The Cell Length unit represents the step size as a number of cells.
   
   IntegratorType
       This property determines which integrator (with increasing accuracy) to use for creating streamlines.
   
   InterpolatorType
       This property determines which interpolator to use for
       evaluating the velocity vector field. The first is faster though the
       second is more robust in locating cells during streamline integration.
   
   MaximumError
       This property specifies the maximum error (for Runge-Kutta 4-5) tolerated throughout streamline integration.
       The Runge-Kutta 4-5 integrator tries to adjust the step size such that the
       estimated error is less than this threshold.
   
   MaximumStepLength
       When using the Runge-Kutta 4-5 integrator, this property specifies the maximum integration step size.
   
   MaximumSteps
       This property specifies the maximum number of steps, beyond which streamline integration is terminated.
   
   MaximumStreamlineLength
       This property specifies the maximum streamline length
       (i.e., physical arc length), beyond which line integration is terminated.
   
   MinimumStepLength
       When using the Runge-Kutta 4-5 integrator, this property specifies the minimum integration step size.
   
   SeedSource
       This property specifies the input used to obtain the seed points.
   
   SurfaceStreamlines
       Specify whether to compute surface streamlines.
   
   TerminalSpeed
       This property specifies the terminal speed, below which particle advection/integration is terminated.
   
   UseLocalSeedSource
       If true the filter considers that the whole seed source is available on all ranks.
       Else the filter will aggregate all seed sources from all ranks and merge their points.
       WARNING: do not set this value to true unless you know what you're doing.
   
   Vectors
       This property contains the name of the vector array from which to generate streamlines.
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`